tests/e2e-artifacts/svc-with-httproute.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-with-httproute
spec:
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-with-httproute
spec:
  parentRefs:
  - name: svc-with-httproute-gateway
  hostnames:
  - svc-with-httproute.example.com
  rules:
  - backendRefs:
    - name: svc-with-httproute
      port: 80
